--- a/src/components/navigation-sidebar/navSidebar.module.css
+++ b/src/components/navigation-sidebar/navSidebar.module.css
@@ -6,51 +6,30 @@
 
   background: var(--foreground-color);
 
-  border-right: var(--secondary-color) solid 2px;
+  border-inline-end: var(--secondary-color) solid 2px;
   box-sizing: border-box;
-  border-radius: 25px;
+  border-start-end-radius: 25px;
+  border-end-end-radius: 25px;
 
   display: flex;
   align-items: center;
   flex-direction: column;
   gap: 1rem;
 
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   padding: 2rem 0.5rem;
 
-  transition: width 0.15s linear;
+  transition: width 0.15s linear, transform 0.15s linear;
 }
 
-.navSidebar_container:hover {
-  width: 20rem;
+.locked {
 }
 
-@media screen and (max-width: 800px) {
-  .navSidebar_container {
-    width: 4.8rem;
-  }
-  .navSidebar_container:hover {
-    width: 4.8rem;
-  }
+.popup {
 }
-
-.naviBottomPanel {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-
-  gap: 1rem;
-}
-
-.naviBottomPanelShrunken {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  gap: 1rem;
+.navLogoContainer {
 }
 
 .navLogo {
@@ -58,32 +37,110 @@
   aspect-ratio: 1/1;
 }
 
-.button {
-  min-width: 2.8rem;
-  min-height: 2.8rem;
+.navSidebar_container:hover {
+  width: 24rem;
+}
 
-  border: none;
+.navSidebar_container:hover .power_button,
+.navSidebar_container.locked .power_button {
+  border-start-end-radius: 0px !important;
+  border-end-end-radius: 0px !important;
+}
 
-  color: white;
+.navSidebar_container:hover .settings_button,
+.navSidebar_container.locked .settings_button {
+  width: auto !important;
+  border-start-start-radius: 0px !important;
+  border-end-start-radius: 0px !important;
+}
 
+.navSidebar_container:hover .settings_text,
+.navSidebar_container.locked .settings_text {
+  display: flex;
+}
+
+.navSidebar_container:hover .combined_buttons,
+.navSidebar_container.locked .combined_buttons {
+  flex-direction: row;
+  box-shadow: var(--mui-shadows-6);
+  gap: 0rem;
+}
+
+.navSidebar_container:hover .lock_button,
+.navSidebar_container.locked .lock_button {
+  display: inline-flex !important;
+}
+
+.nav_bottom_panel {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
-  gap: 0.3rem;
-  padding: 0px 0.3rem;
 
-  filter: brightness(100%);
-
-  transition: filter 0.1s linear;
+  gap: 0.5rem;
 }
 
-.button:hover {
-  filter: brightness(70%);
-  cursor: pointer;
+.combined_buttons {
+  border-radius: 20px;
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+
+  gap: 1rem;
+
+  height: fit-content;
+  width: fit-content;
+  pointer-events: auto;
 }
 
-.button:active {
-  filter: brightness(50%);
-  cursor: pointer;
+.power_button {
+  box-shadow: none !important;
+
+  background-color: var(--mui-palette-error-main) !important;
+  color: var(--mui-palette-primary-contrastText) !important;
+
+  transition: border-radius 0.1s linear !important;
+
+  border-radius: 50%;
+}
+
+.settings_button {
+  box-shadow: none !important;
+
+  width: 2.5rem !important;
+
+  gap: 0.5rem !important;
+
+  background-color: var(--mui-palette-secondary-main) !important;
+  color: var(--mui-palette-primary-contrastText) !important;
+
+  transition: border-radius 0.1s linear !important;
+}
+
+.settings_text {
+  display: none;
+}
+
+.lock_button {
+  display: none !important;
+  background-color: var(--mui-palette-niceBlue) !important;
+  color: var(--mui-palette-primary-contrastText) !important;
+}
+
+@media screen and (max-width: 800px) {
+  .navSidebar_container {
+    position: fixed;
+    z-index: 100 !important;
+    transform: translateX(-18rem);
+  }
+
+  .navSidebar_container.popup {
+    transform: translateX(0);
+  }
+}
+
+@media screen and (max-height: 800px) {
+  .navLogoContainer {
+    display: none;
+  }
 }
