--- a/src/components/skill-box/skillbox.module.css
+++ b/src/components/skill-box/skillbox.module.css
@@ -24,7 +24,7 @@
 
   min-height: 5rem;
 
-  border: 2px solid var(--mui-palette-secondary-main);
+  border: 0.125rem solid var(--mui-palette-secondary-main);
   border-radius: 25px;
 }
 
