--- a/src/app/employees/employees.module.css
+++ b/src/app/employees/employees.module.css
@@ -27,7 +27,7 @@
   width: 100%;
   height: 100%;
 
-  border: 2px solid var(--secondary-color);
+  border: 0.125rem solid var(--secondary-color);
   border-radius: 25px;
 
   overflow-x: hidden;
