--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -1,3 +1,7 @@
+.root_container {
+  background-color: black;
+}
+
 .home_page_container {
   width: 100dvw;
   height: 100vh;
@@ -27,7 +31,7 @@
   width: 100%;
   height: 100%;
 
-  border: 2px solid var(--secondary-color);
+  border: 0.125rem solid var(--secondary-color);
   border-radius: 25px;
 
   overflow-x: hidden;
