--- a/src/components/certificate-panel/certificatepanel.module.css
+++ b/src/components/certificate-panel/certificatepanel.module.css
@@ -1,4 +1,4 @@
-.request_panel {
+.certificate_panel {
   height: 100%;
   width: 30%;
   min-width: 22rem;
@@ -17,7 +17,7 @@
   border-radius: 25px;
 }
 
-.request_scroll_panel {
+.scroll_panel {
   width: 100%;
   height: 100%;
 
