--- a/src/app/employees/[profile]/profile.module.css
+++ b/src/app/employees/[profile]/profile.module.css
@@ -13,7 +13,7 @@
 
   display: flex;
   flex-direction: row;
-  gap: 2rem;
+  gap: var(--global-padding);
 
   /* background: var(--mui-palette-foreground); */
 }
