--- a/src/app/employees/employees.module.css
+++ b/src/app/employees/employees.module.css
@@ -6,7 +6,7 @@
 
   display: flex;
   flex-direction: row;
-  gap: 2rem;
+  gap: var(--global-padding);
 
   /* border: 0.125rem solid var(--mui-palette-secondary-main);
   border-radius: 25px; */
